--- a/website/party.css
+++ b/website/party.css
@@ -1,8 +1,33 @@
+
+.main{
+    position: relative;
+}
+
 .firework-class{
     position: fixed;
     background-color: rgb(255, 0, 0);
-    width: 10px;
-    height: 10px;
-
-    transition: 1s;
+    transform: translate(-50%, -50%);
+    width: 0.5vmin;
+    aspect-ratio: 1;
+    background-size: 0.5vmin 0.5vmin;
+    background-repeat: no-repeat;
 }
+
+#ground-id{
+    position: absolute;
+    background-color: green;
+    width: 100%;
+    height: 30px;;
+
+    bottom: 0;
+}
+
+#moon-id{
+    width: 10rem;
+    height: 10rem;
+    border-radius: 50%;
+    background: #fff77e;
+
+    margin-left: 80%;
+}
+
